--- a/styles/styles.css
+++ b/styles/styles.css
@@ -311,7 +311,6 @@ section {
   bottom: 0;
   z-index: 10;
   transform: translateX(100vw);
-  transition: all 0.5s ease-in-out;
 }
 .header .main-nav::after {
   content: "AbDevWeb 2023 - Tous droits résérvés.";
